--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
+CLIENT_ID=959397823097-ri3d1hqrl571u2guer8jgi4hofl7784d.apps.googleusercontent.com
 CLIENT_SECRET=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
