--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon ./server",
-    "dev:client": "cd client; yarn start",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev:client": "cd client; yarn start"
   },
   "keywords": [],
   "author": "",
